--- a/chat/src/GroupChat.css
+++ b/chat/src/GroupChat.css
@@ -92,7 +92,7 @@
     grid-column-end: 9;
     grid-row-start: 1;
     grid-row-end: 190;
-    background: rgb(233, 229, 229);
+    /* background: rgb(233, 229, 229); */
     border-radius: 5px;
   }
   .chatInputWrapper {
@@ -114,9 +114,10 @@
     padding: 0 0 50px 0;
     margin-top: 60px;
     margin-bottom: 10px;
-    max-height: 400px;
+    max-height: 600px;
     overflow: scroll;
     scroll-behavior: smooth;
+    float: inline-end;
   }
   .chat li {
     padding: 0.5rem;
