--- a/chat/src/Menu.css
+++ b/chat/src/Menu.css
@@ -7,7 +7,7 @@
 
 .header{
     text-align: center;
-    color: purple;
+    color: blue;
     font-style: oblique;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
