--- a/chat/src/GroupChat.css
+++ b/chat/src/GroupChat.css
@@ -316,3 +316,10 @@ input.textarea {
   color: #666;
   font-weight: 400;
 }
+
+body {
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(#5b1492, #882973, #ce7eb5);
+}
