--- a/chat/src/HelpContent.css
+++ b/chat/src/HelpContent.css
@@ -11,9 +11,10 @@
     padding-bottom: 20px;
     background-image: linear-gradient(#5b1492, #882973, #ce7eb5);
   }
-  p{
-      text-align: left;
-      padding-left: 250px;
+  .para{
+      /* padding-left: 250px; */
+      text-align: center;
+      /* padding-right: 250px; */
   }
 
   
