--- a/chat/src/Chat.css
+++ b/chat/src/Chat.css
@@ -94,6 +94,12 @@ body {
   grid-row-end: 190;
   /* background: rgb(233, 229, 229); */
   border-radius: 5px;
+  height: 100%;
+  width: 100;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(#5b1492, #882973, #ce7eb5);
+  background-size: cover; 
+  padding-bottom: 250px;
 }
 .chatInputWrapper {
   display: grid;
@@ -119,12 +125,19 @@ body {
   overflow: scroll;
   scroll-behavior: smooth;
   float: inline-end;
+  /* height: 100%;
+  width: 100;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(#5b1492, #882973, #ce7eb5);
+  background-size: cover;  */
+  
 }
 .chat li {
   padding: 0.5rem;
   padding-bottom: 32px;
   overflow: hidden;
   display: flex;
+  
   
 }
 .chat .avatar {
@@ -317,9 +330,15 @@ input.textarea {
   font-weight: 400;
 }
 
+/* html {
+  height: 100%;
+} */
+
+/* 
 body {
   height: 100%;
-  margin: 0;
+  width: 100;
   background-repeat: no-repeat;
   background-image: linear-gradient(#5b1492, #882973, #ce7eb5);
-}
+  background-size: cover;  
+} */
