--- a/chat/src/MainPage.css
+++ b/chat/src/MainPage.css
@@ -3,6 +3,12 @@
     font-family: 'Sansita', sans-serif;
     border-top: 0px;
     margin: 0px;
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    padding-bottom: 20px;
+    background-image: linear-gradient(#5b1492, #882973, #ce7eb5);
+    padding-bottom: 400px;
 }
 
 .containers {
